added more jvm arguments